--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
 				<h3>Model2</h3>
 				<h2>Dermatology</h2>
 				<p>Check your skin to what type of skin disease do you have?</p>
-				<a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
+				<a href={% url "models:skin_disease" %} class="btn"> learn more <span class="fas fa-chevron-right"></span></a>
 			</div>
 
 
