--- a/templates/p_profile.html
+++ b/templates/p_profile.html
@@ -64,7 +64,7 @@
                             <li class="list-group-item"><strong>Email:</strong> <a href="mailto:{{ user.email }}">{{ user.email }}</a></li>
                         </ul>
                         <div class="text-center mt-3">
-                            <a class="btn btn-custom" href="#">Edit Profile</a>
+                            {% comment %} <a class="btn btn-custom" href="#">Edit Profile</a> {% endcomment %}
                         </div>
 
                     </div>
