--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,14 +8,18 @@
 	<title>MediGen Website</title>
 	<!-- cdn-->
 	<link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    {% comment %} <script src={% static "script1.js" %}></script> {% endcomment %}
 	{% comment %} <link rel="stylesheet" href="{% static 'style.css' %}"> {% endcomment %}
-	<link rel="stylesheet" href="{% static 'newstyle.css' %}">
-    
+	<link rel="stylesheet" href="{% static 'style.css' %}">
+    <script src="{% static "script1.js" %}"></script>
 
 </head>
 <body>
     <header class="header">
+
         <a href="#" class="logo"><i class="fa-solid fa-heart-pulse" style="color: #63E6BE;"></i>MediGen.</a>
     
         <nav class="navbar">
@@ -24,22 +28,152 @@
             <a href="#Models">Models</a>
             <a href="#About">About</a>
             <a href="#Doctors">Doctors</a>
-            {% if user.is_authenticated %}
+         {% if user.is_authenticated %}
                 <a href="{% url 'meds:profile' %}" class='btn btn-outline-primary'>{{ user.full_name }}</a>
                 <a href="{% url 'meds:logout' %}" class='btn btn-outline-danger'>Logout</a>
-            {% else %}
-                <a href="{% url 'meds:register' %}" class='btn btn-outline-primary'>Register</a>
+            {% else %} 
+                <a id="login" class='btn btn-outline-primary' data-bs-toggle="modal" data-bs-target="#login_modal">Register</a>
                 <a href="{% url 'meds:profile' %}" class='btn btn-outline-primary'>Profile</a>
-            {% endif %}
+         {% endif %}
         </nav>
-
-
-            <script src="script.js"></script>
-
+            
             {% comment %} <a href="#" class = 'btn btn-outline-primary' id = "loginBtn">Login</a> {% endcomment %}
             {% comment %} <a href="#Contact">Contact</a> {% endcomment %}
+            {% comment %} Login Modal {% endcomment %}
+            <div class="modal fade" id="login_modal" tabindex="-1" >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title text-center">Sign In</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{% url "meds:login" %}" method="POST">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                              <label for="email" class="form-label">Email address</label>
+                              <input type="email" class="form-control" id="email" name="loginEmail">
+                            </div>
+                            <div class="mb-3">
+                              <label for="password" class="form-label">Password</label>
+                              <input type="password" class="form-control" id="password" name="loginPassword">
+                            </div>
+                            <button type="submit" class="btn btn-default">Sign In</button>
     
-        </nav>
+                          </form>
+                    </div>
+                   <div class="modal-footer">
+                    <div class="mb-3">
+                     <p class="blockquote">Don't have an account? <a class="" role="button" data-bs-target="#signup_modal" data-bs-toggle="modal" data-bs-dismiss="modal" >Create an account</a></p>
+                    </div>
+                    <div id="errorMessage" class="alert alert-danger" style="display: none;"></div>
+
+                   </div>
+                  </div>
+                </div>
+              </div>
+
+              {% comment %} Register Modal {% endcomment %}
+
+              <div class="modal fade " id="signup_modal" tabindex="-1" >
+                <div class="modal-dialog modal-lg modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title text-center">Sign Up</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="{% url "meds:register" %}" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                               <div class="mb-3">
+                                    <label for="full_name">Name</label>
+                                    <input type="text" id="full_name" class="form-control" name="fullName" >
+                               </div>
+                               <div class="row mb-3">
+                                <div class="col">
+                                    <label for="phone">Phone</label>
+                                    <input type="phone" id="phone" class="form-control" name="phone"  >
+                                </div>
+                                <div class="col">
+                                    <label for="email">Email</label>
+                                    <input type="email" id="email" class="form-control" name="email">
+                                </div>
+                               </div>
+                               <div class="row mb-3">
+                                <div class="col">
+                                    <label for="gender">Gender</label>
+                                    <select  class="form-select" name="gender" id="gender" >
+                                        <option value="Male">Male</option>
+                                        <option value="Female">Female</option>
+                                        <option selected>Not Specified</option>
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <label for="dob">Date of Birth</label>
+                                    <input type="date" id="dob" class="form-control" name="dob">
+                                </div>
+                               </div>
+                               <div class="row mb-3">
+                                <div class="col">
+                                    <label for="password">Password</label>
+                                    <input type="password" id="password" class="form-control" name="password">
+                                </div>
+                                <div class="col">
+                                    <label for="role">Sign Up as</label>
+                                    <select class="form-select" name="role" id="role" >
+                                        <option value="1">Patient</option>
+                                        <option value="2">Doctor</option>
+
+                                    </select>
+                                </div>
+
+                               </div>
+                                <!-- Additional fields for Doctor, hidden initially -->
+                            <div id="doctorFields" style="display: none;">
+                                <div class="row mb-3">
+                                    <div class="col-12">
+                                        <label for="degree" class="form-label">Degree <span class="text-danger">*</span></label>
+                                        <input type="text" class="form-control" name="degree" id="degree" placeholder="Degree">
+                                    </div>
+    
+                                    <div class="col-12">
+                                        <label for="specialization" class="form-label">Specialization <span class="text-danger">*</span></label>
+                                        <input type="text" class="form-control" name="specialization" id="specialization" placeholder="Specialization">
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12">
+                                        <label for="experience" class="form-label">Experience <span class="text-danger">*</span></label>
+                                        <input type="text" class="form-control" name="experience" id="experience"  placeholder="Experience" >
+                                    </div>
+                                    <div class="col-12">
+                                        <label for="photo" class="form-label">Upload Profile Photo <span class="text-danger">*</span></label>
+                                        <input type="file" class="form-control" name="photo" id="photo" >
+                                    </div>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="address" class="form-label">Address <span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" name="address" id="address" placeholder="Address">
+                                </div>
+
+                            </div>
+                            <button type="submit" class="btn btn-default">Sign Up</button>
+
+                            </form>
+                            
+
+                    
+                        <div class="modal-footer">
+                            <div class="mb-3">
+                                <p class="blockquote">Already have an account? <a  role="button" data-bs-target="#login_modal" data-bs-toggle="modal" data-bs-dismiss="modal" >sign in</a></p>
+                            </div>
+                        </div>
+                    </div>
+               
+                </div>
+              </div>
     </header>
 
     {% block content %}{% endblock %}
